# sollana-polls

./: Anchor.toml  LICENSE  README.md  Seminarski rad - Vote App.docx  package.json
app/: package.json  webpack.config.js
app/src/: App.tsx  config.ts  solana_polls.json
app/src/js/components/: Menu.tsx  Wallet.tsx
app/src/js/components/form/: NewPollForm.tsx  Radio.tsx  Submit.tsx
app/src/js/components/polls/: Poll.tsx  Results.tsx  Vote.tsx
app/src/js/pages/: Home.tsx  Loading.tsx  NewPoll.tsx  Polls.tsx
programs/solana-polls/: Cargo.toml
programs/solana-polls/src/: lib.rs
programs/solana-polls/src/state/: poll.rs
